--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SCOUT_DRIVER=meilisearch
+MEILISEARCH_HOST=http://meilisearch:7700
+SAIL_XDEBUG_MODE=develop,debug,coverage
+SAIL_XDEBUG_CONFIG="172.29.0.1"
